# movielens-recommender-uv

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml  logging.yaml  model_config.yaml
docs/: architecture.md  model_card.md  monitoring.md
reports/metrics/: baseline_metrics.json  evaluation_metrics.json  model_comparison.json  train_metrics.json
scripts/: compare_models.py  download_data.py  evaluate.py  predict.py  promote_model.py  register_model.py  run_baselines.py  run_pipeline.py  train.py  validate_env.py
src/recommender/data/: dataset.py  movielens_loader.py  preprocess.py  split.py
src/recommender/evaluation/: baselines.py  comparison.py  evaluator.py  metric_strategy.py  metrics.py
src/recommender/features/: build_features.py
src/recommender/inference/: predict.py  recommender_service.py
src/recommender/models/: base.py  matrix_factorization.py  mlp_recommender.py  model_factory.py
src/recommender/pipeline/: base_pipeline.py  inference_pipeline.py  training_pipeline.py
src/recommender/repositories/: artifact_repository.py
src/recommender/tracking/: mlflow_tracker.py  mlflow_wrapper.py  model_promotion.py  model_registry.py
src/recommender/training/: callbacks.py  loss.py  optimizer_factory.py  trainer.py
src/recommender/utils/: config.py  logger.py  paths.py  seed.py  settings.py
tests/: test_base_pipeline.py  test_baselines.py  test_comparison.py  test_data_loader.py  test_features.py  test_metrics.py  test_model_factory.py  test_model_promotion.py  test_model_registry.py  test_pipeline_stages.py  test_preprocess.py  test_settings.py  test_training_pipeline.py
