[project]
name = "movielens-recommender"
version = "0.3.0"
description = "Sistema de recomendação MovieLens com PyTorch, MLflow, DVC, Docker e uv"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Rafael Alves da Costa" },
]

dependencies = [
    "torch==2.13.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4,<2.0.0",
    "scikit-learn>=1.5.0",
    "mlflow==2.14.0",
    "dvc>=3.50.0",
    "pyyaml>=6.0.1",
    "pydantic-settings",
    "setuptools>=70,<81",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/recommender"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Type google\\._upb\\._message\\..* uses PyType_Spec.*:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"
